# tinygrafX

./: .gitignore  README.md
tinyraytracing/: CMakeLists.txt
tinyraytracing/src/: CMakeLists.txt  main.cpp
tinyraytracing/src/graphX/core/: Iframebuffer.hpp  Irenderer.hpp  framebuffer.hpp
tinyraytracing/src/graphX/geometry/: Ishape.hpp  geometry.hpp  vector.hpp
tinyraytracing/src/graphX/geometry/shapes/: Ashape.hpp  Ishape.hpp  shpere.cpp  shpere.hpp
tinyraytracing/src/graphX/renderer/: ppm_renderer.cpp  ppm_renderer.hpp
tinyraytracing/src/graphX/rt/: material.cpp  material.hpp  raytracer.cpp  raytracer.hpp
tinyraytracing/src/graphX/rt/scene/: light.hpp  material.cpp  material.hpp  scene.hpp  shape.hpp
tinyraytracing/tests/: CMakeLists.txt  test_main.cpp
tinyraytracing/tests/graphX/core/: test_framebuffer.cpp
tinyraytracing/tests/graphX/geometry/: test_geometry.cpp  test_geometry.hpp  test_vector.cpp  test_vector.hpp
tinyraytracing/tests/graphX/geometry/shapes/: test_sphere.cpp
tinyraytracing/tests/graphX/renderer/: test_ppm_renderer.cpp
tinyraytracing/tests/graphX/rt/: test_raytracer.cpp
